--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon --exec node src/index.js",
-    "lint": "eslint . --ext .js",
-    "format": "prettier --write ."
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "eslint src --ext .js",
+    "format": "prettier --write .",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "repository": {
     "type": "git",
