--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build:client": "cd client && npm ci && npm run build",
-    "start": "npm run migrate:up && node src/server.js",
-    "dev":   "npm run build:client && nodemon src/server.js",
+    "prestart": "npm run migrate:up",
+    "start":    "node src/server.js",
+    "dev":      "nodemon src/server.js",
     "lint": "eslint src --ext .js",
     "format": "prettier --write .",
     "test": "echo \"No tests specified\" && exit 0",
-  
     "migrate:local": "psql -U vicenteechegaray -d correspondencia -f migrations/*.sql",
-  
     "migrate:up": "node-pg-migrate up --database-url \"$DATABASE_URL\" --dir migrations --extension sql",
     "migrate:down": "node-pg-migrate down --database-url \"$DATABASE_URL\" --dir migrations --extension sql"
+
   },
   "repository": {
     "type": "git",
@@ -42,7 +42,6 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "globals": "^13.24.0",
-    "node-pg-migrate": "^7.9.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
   }
