fix: remove prestart hook to restore server startup

--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build:client": "cd client && npm ci && npm run build",
-    "prestart": "npm run migrate:up",
-    "start":    "node src/server.js",
+
+    "start": "node src/server.js",
+
     "dev":      "nodemon src/server.js",
     "lint": "eslint src --ext .js",
     "format": "prettier --write .",
     "test": "echo \"No tests specified\" && exit 0",
     "migrate:local": "psql -U vicenteechegaray -d correspondencia -f migrations/*.sql",
     "migrate:up": "node-pg-migrate up --database-url \"$DATABASE_URL\" --dir migrations --extension sql",
-    "migrate:down": "node-pg-migrate down --database-url \"$DATABASE_URL\" --dir migrations --extension sql"
+    "migrate:down": "node-pg-migrate down --database-url \"$DATABASE_URL\" --dir migrations --extension sql",
+    "build:client": "cd client && npm ci && npm run build"
 
   },
   "repository": {
