--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/Vechegaray23/correspondencia#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
     "react-bootstrap": "^2.10.9"
   },
