Integrar notificaciones SMS y e-mail en producción

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-PORT=3000
-DATABASE_URL=postgres://vicenteechegaray@localhost:5432/correspondencia
+EMAIL_HOST=smtp.sendgrid.net
+EMAIL_PORT=465
+EMAIL_USER=apikey
+EMAIL_PASS=TU_API_KEY
+EMAIL_FROM=no-reply@tuapp.cl
+
+SMS_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SMS_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SMS_FROM=+15555555555
