--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "node --import dotenv/config --loader ts-node/esm src/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,18 +26,26 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3",
+    "p-retry": "^6.2.1",
     "pg": "^8.14.1",
-    "react-bootstrap": "^2.10.9"
+    "react-bootstrap": "^2.10.9",
+    "twilio": "^5.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
     "@eslint/json": "^0.12.0",
+    "@swc/core": "^1.11.24",
+    "@swc/helpers": "^0.5.17",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "globals": "^13.24.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
