--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "p-retry": "^6.2.1",
     "pg": "^8.14.1",
     "react-bootstrap": "^2.10.9",
-    "twilio": "^5.6.1"
+    "twilio": "^5.6.1",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
@@ -46,7 +47,6 @@
     "globals": "^13.24.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"  
   }
 }
