--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pg": "^8.14.1",
     "react-bootstrap": "^2.10.9",
     "twilio": "^5.6.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.1",
