--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pg": "^8.14.1",
     "react-bootstrap": "^2.10.9",
     "twilio": "^5.6.1",
+    "qrcode": "^1.5.3",
+
     "typescript": "^5.1.6"
   },
   "devDependencies": {
