--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "node --import dotenv/config --loader ts-node/esm src/server.js"
-  },
+    "dev": "node --import dotenv/config --loader ts-node/esm src/server.js",
+    "migrate:up": "node --import dotenv/config scripts/migrate.js"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vechegaray23/correspondencia.git"
